@@ -28,5 +28,6 @@ t/PYX-Optimization/01-use.t
 t/PYX-Optimization/02-version.t
 t/PYX-Optimization/04-new.t
 t/PYX-Optimization/05-parse_file.t
+t/PYX-Optimization/06-parse_handler.t
 xt/PYX-Optimization/01-pod_coverage.t
 xt/PYX-Optimization/02-pod.t
